# simulation_weak_emergence

./: README.md  agent.py  constants.py  f_agent.py  f_constants.py  f_main.py  f_simulation.py  main.py  simulation.py
mesa_approach/: pyproject.toml
mesa_approach/src/mesa_approach/agents/: agents.py
mesa_approach/src/mesa_approach/app/: app.py
mesa_approach/src/mesa_approach/model/: model.py
