[project]
name = "mesa-approach"
version = "0.1.0"
description = ""
authors = [
    {name = "JoshuaNiklas",email = "joshuaniklasgross@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mesa (>=3.3.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "solara (>=1.54.0,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "altair (>=6.0.0,<7.0.0)",
    "intervaltree (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mesa_approach", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
